k8s/jerney.yaml
#-------- Create namespace------
apiVersion: v1
kind: Namespace
metadata:
  name: jerney
  labels:
    app.kubernetes.io/part-of: jerney

---
#---------- Postgresql deployment-------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategie:
    type: Recreate
  selector:
    matchlabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: jerney-db
        app.kubernetes.io/part-of: jerney
    spec:
      automontServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
      - name: postgres
        image: postgres:16-alpine 
        ports: 
          - containerPort: 5432
            protocol: TCP
        volumeMounts:
          - name: db-storage 
            mountPath: /var/lib/postgresql/data
            subPath: pgdata
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegesExcalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
        readynessProbes:
          exec:
            command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: jerney-db-pvc
---
#------Postgresql Service-------------
apiVersion: v1
kind: Service
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
#--------Backend deployment--------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: backend
          image: kenlefak/jerney-backend
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          # Security context
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3

---
#----------Bsckend service---------
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
#------------Frondend deployment-------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: frontend
          image: kenlefak/jerney-frontend
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # Nginx needs write for cache/pid
            runAsNonRoot: true
            runAsUser: 101 # nginx user UID in alpine
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
---
#------------Frontend Service------------

apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jerney-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# ---- NetworkPolicy: DB only accepts traffic from Backend ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-db-allow-backend-only
  namespace: jerney
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-backend
      ports:
        - port: 5432
          protocol: TCP

---
# ---- NetworkPolicy: Backend accepts traffic from Frontend only ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-backend-allow-frontend-only
  namespace: jerney
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend
      ports:
        - port: 5000
          protocol: TCP
